# grepl

./: .gitignore  Makefile  README.md  just_the_tags.txt  labeled_tags.txt  pyproject.toml
docs/: AGENTS.md
models/vitpose/: vitpose_b_mmpose.py
src/grepl/: 2025_09_02_binary_overfit.ipynb  2025_09_21_yolo_backbone.ipynb  constants.py  video_frame_scratch.ipynb
src/grepl/inference/: __init__.py  mmpose_vitpose_service.py  quick_test_mmpose_vitpose_service.py  vitpose_service.py
src/grepl/labeling/: README.md  __init__.py  cli.py  db.py  queue.py
src/grepl/models/: lstm_on_dino_outputs.py  max_classifier.py
src/grepl/processing/: generate_annotations.py  video.py  video_dataset.py  videos_to_frames.py
src/grepl/scrape/: README.md  bulk_video_clip_download.py  video_clip_download.py
