[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "grepl"
version = "0.1.0"
description = "sports metric learning"
authors = [{ name = "John Curcio", email = "john.leonardo.curcion@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch @ https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
  "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
  "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl",

  "numpy>=1.23.2,<2.0.0",
  "pandas>=2.2.3",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.0.0",
  "scikit-learn>=1.7.1",
  "seaborn>=0.13.2",
  "tqdm>=4.67.1",
  "av>=15.0.0,<16.0.0",

  "ipython<9.0.0",
  "jupyter>=1.1.1",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "beautifulsoup4>=4.13.4",
  "playwright>=1.52.0",
  "selenium>=4.33.0",
  "webdriver-manager>=4.0.2",
  "yt-dlp>=2025.6.30",
  "supervision>=0.26.1",
  "wandb>=0.21.3",
  "fiftyone>=1.0.0",
  "cvat-sdk>=2.45.0",

  "accelerate>=1.10.0",
  "transformers>=4.55.0,<5.0.0",
  "mmpose>=1.3.0",
  "mmdet>=3.3.0,<3.4.0",
  "mmengine>=0.10.1,<1.0.0",
  "mmcv==2.0.1",
]

[dependency-groups]
dev = [
  "matplotlib>=3.10.1,<4.0.0",
  "ipykernel>=6.30.0,<7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grepl"]

[tool.hatch.build.targets.sdist]
include = ["src/grepl", "README.md", "docs", "scripts"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
xtcocotools = ["numpy"]
